--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "aos": "^2.3.4",
     "countup.js": "^2.0.4",
     "inputmask": "^5.0.3",
+    "intl-tel-input": "^17.0.0",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
     "reset-css": "^5.0.1",
